Lazy-compute mentioned roles in a guild message